--- a/source/_patterns/02-molecules/card/_card.scss
+++ b/source/_patterns/02-molecules/card/_card.scss
@@ -34,9 +34,9 @@ $_config_schemes: (
     heading-line-height: 1,
     title-color: "gray-warm-90",
     title-link: (
-      default: "blue-50v",
-      hover: "blue-60v",
-      active: "blue-70v",
+      default: "blue-50",
+      hover: "blue-60",
+      active: "blue-70",
     ),
     body-size: 5,
   ),
